--- a/index.html
+++ b/index.html
@@ -7,10 +7,49 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<!-- Seccion HEADER -->
+	<header class="header">
+		<h1> Love Love Panda Desu </h1>
+		<h4> The best place for panda lovers </h4>
+		<!-- Seccion 1era foto panda -->
+		<section class="panda">
+			<div class="panda1"></div>
+
+		</section>
+		<!-- Seccion ABOUT -->
+		<section class="texto">
+			<!-- ver porque no puedo ingresar foto desde aqui -->
+			<div class="colorverde">
+				<div class="about">
+					<!-- <div class="div-texto">-->
+					<h1>About Pandas</h1>
+					<p>The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"), also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo. Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.</p>
+				</div>
+			</section>
+
+			<section class="panda">
+				<div class="panda2"></div>
+			</section>
+
+			<section class="container-photos" >
+			
+				<div class="colorverde">
+					<h1>Pictures</h1>
+					<div class="pandas"></div>
+				</div>
+			</section>
+
+			<section class="panda">
+				<div class="panda3"></div>
+			</section>	
+
 	<!-- 
-	Texto about panda (puedes borrarlo luego de utilizarlo):
-		The giant panda (Ailuropoda melanoleuca, literally "black and white cat-foot"; Chinese: 大熊猫; pinyin: dà xióng māo, literally "big bear cat"), also known as panda bear or simply panda, is a bear native to south central China. It is easily recognized by the large, distinctive black patches around its eyes, over the ears, and across its round body. The name "giant panda" is sometimes used to distinguish it from the unrelated red panda. Though it belongs to the order Carnivora, the giant panda's diet is over 99% bamboo. Giant pandas in the wild will occasionally eat other grasses, wild tubers, or even meat in the form of birds, rodents or carrion. In captivity, they may receive honey, eggs, fish, yams, shrub leaves, oranges, or bananas along with specially prepared food.
-	 -->
-	<script src="assets/js/main.js"></script>
+
+-->
+</header>
+<footer>
+	<p>Love Love Panda - Laboratoria 2017</p>
+</footer>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
